Fixed abmormal sizing of images and whitespace in collection view. Moved contribute box to right hand side—downsized box navigation text size and fixed the color of text in the transcription and tagging boxes.

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -134,8 +134,12 @@ a.gray-text:hover {
   padding-right: 0;
 }
 
-input, select, textarea {
-  color: rgba(51,51,51,1); /* #333333 */
+main {
+  min-height: calc(100vh - 4.5rem);
+}
+
+input {
+  color: rgba(51,51,51,.7); /* #333333 */
 }
 
 .py-default {
@@ -154,12 +158,12 @@ input, select, textarea {
 }
 
 .navbar-offwhite .navbar-nav .active>.nav-link, .navbar-offwhite .navbar-nav .nav-link.active, .navbar-offwhite .navbar-nav .nav-link.show, .navbar-offwhite .navbar-nav .show>.nav-link {
-  color: rgba(51,51,51,.7);  /* #333333 */
+  color: rgba(51,51,51,.7); /* #333333 */
 }
 
 .navbar-offwhite .navbar-nav .nav-link {
   font-family: "Open Sans", sans-serif;
-  color: rgba(51,51,51,1);
+  color: rgba(51,51,51,1); /* #333333 */
 }
 
 .nav-dropdown .dropdown-menu {
@@ -168,7 +172,7 @@ input, select, textarea {
 }
 
 .img-header {
-  background-color: rgba(51,51,51,.35);
+  background-color: rgba(51,51,51,.35); /* #333333 */
   background-image: url("../img/volunteer-header-one-crop.jpg");
   background-blend-mode:overlay;
   background-size: cover, 100% auto;
@@ -179,8 +183,8 @@ input, select, textarea {
 }
 
 .padding-header {
-  padding-top: calc( ( 450px - 147px ) / 2 ); /* vertically center text and button */
-  padding-bottom: calc( ( 450px - 147px ) / 2 );
+  padding-top: calc( ( 28.125rem - 9.1875rem ) / 2 ); /* vertically center text and button */
+  padding-bottom: calc( ( 28.125rem - 9.1875rem ) / 2 );
 }
 
 .margin-default, .mxy-default {
@@ -374,10 +378,6 @@ input, select, textarea {
   padding-left: 0;
 }
 
-input {
-  color: rgba(51,51,51,1);
-}
-
 .btn-primary {
   background-color: rgba(0,97,142,1);
   border-color: rgba(0,97,142,1);
@@ -412,16 +412,21 @@ input {
   padding: 1rem .5rem;
 }
 
+.card-img-collection {
+  object-position: center top;
+  object-fit: cover;
+  height: 18.75rem;
+}
+
 .card-img-overlay {
   left: 0;
   right: 0;
   bottom: 0;
+  margin-top: 60%;
   padding-right: .5rem;
   padding-left: .5rem;
-}
-
-.card-img-overlay-featured {
-  margin-top: 60%;
+  /* padding: 15% .5rem .5rem; */
+  /* margin: 66.667% 0 0; */
 }
 
 .card-title {
@@ -433,11 +438,12 @@ input {
 }
 
 .latestblog-imgmask {
+  /* width: 12.5rem; */
   width: 100%;
   height: 12.5rem;
   border-radius: .25rem;
   overflow: hidden;
-  box-shadow: 0 0 4px rgba(51,51,51,.7);
+  box-shadow: 0 0 .25rem rgba(51,51,51,.7);
 }
 
 .img-latestblog {
@@ -451,26 +457,22 @@ input {
   box-shadow: 0 0 .25rem rgba(51,51,51,.8);
 }
 
-.collection-image-link {
-  z-index: 2;
-}
-
 .loading {
   position: fixed;
     width:  100%;
     height:  100%;
     z-index: 1000;
-    background-color: rgba(51,51,51,.3);
+    background-color: rgba(51,51,51,.5);
     top: 0;
     left: 0;
-    padding-top: 20%;
+    padding-top: 18%;
 }
 
 .loading-pulse {
   position: relative;
   z-index: 2000;
   width: .375rem;
-  height: 3rem;
+  height: 1.5rem;
   background: rgba(0,97,142,.3);
   -webkit-animation: pulse 750ms infinite;
           animation: pulse 750ms infinite;
@@ -482,7 +484,7 @@ input {
   content: '';
   position: absolute;
   display: block;
-  height: 2rem;
+  height: 1rem;
   width: .375rem;
   background: rgba(0,97,142,.4);
   top: 50%;
@@ -514,12 +516,7 @@ input {
 }
 
 .contribute-box {
-  height: calc( 33.3vh );
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  cursor: move;
-  z-index: 2;
+  height: calc( 100vh - 6.0625rem );
 }
 
 .contribute-box .dropdown-menu {
@@ -535,6 +532,7 @@ input {
   color: rgba(250,250,250,1);
   border-radius: 1rem;
   text-decoration: underline;
+  font-size: .875rem;
 }
 
 .nav-pills .nav-link.active {
@@ -544,13 +542,13 @@ input {
 }
 
 .tab-content, .tab-pane {
-  height: calc( 33.3vh - ( 56px + 54px ) );
+  height: calc( 33.3vh - ( 3.5rem + 3.375rem ) );
   overflow-y: scroll;
 }
 
 /* CONTRIBUTE PAGE INLINED STYLES */
 .asset-image {
-  height: calc( 100vh - 97px );
+  height: calc( 100vh - 6.0625rem );
   border: 1px solid rgba(245,245,245,1);
 }
 
@@ -566,7 +564,7 @@ input {
 
 .tab-pane input {
   color: rgba(51,51,51,1);
-  height: calc( 50vh - ( 56px + 54px ) );
+  height: calc( 50vh - ( 3.5rem + 3.375rem ) );
 }
 
 #tab-discussion {
@@ -583,12 +581,12 @@ background-color: #fff;
 border: 1px solid #ccc;
 box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 display: inline-block;
-padding: 4px 6px;
+padding: .25rem .375rem;
 color: #555;
 vertical-align: middle;
-border-radius: 4px;
+border-radius: .25rem;
 width: 100%;
-line-height: 22px;
+line-height: 1.375rem;
 cursor: text;
 }
 .bootstrap-tagsinput input {
@@ -596,7 +594,7 @@ border: none;
 box-shadow: none;
 outline: none;
 background-color: transparent;
-padding: 0 6px;
+padding: 0 .375rem;
 margin: 0;
 width: auto;
 max-width: inherit;
@@ -617,11 +615,12 @@ box-shadow: none;
 }
 
 .bootstrap-tagsinput .badge {
-margin-right: 2px;
+margin-right: .125rem;
 color: white;
-background-color:#0275d8;
-padding:5px 8px;border-radius:3px;
-border:1px solid #01649e
+background-color: #0275d8;
+padding: .3125rem .5rem;
+border-radius: 3px;
+border: 1px solid #01649e;
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"] {
@@ -631,10 +630,10 @@ cursor: pointer;
 
 .bootstrap-tagsinput .badge [data-role="remove"]:after {
 content: "×";
-padding: 0px 4px;
-background-color:rgba(0, 0, 0, 0.1);
-border-radius:50%;
-font-size:13px
+padding: 0 .25rem;
+background-color: rgba(0, 0, 0, 0.1);
+border-radius: 50%;
+font-size: .87;
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"]:hover:after {
@@ -642,12 +641,12 @@ background-color:rgba(0, 0, 0, 0.62);
 }
 
 .bootstrap-tagsinput .badge [data-role="remove"]:hover:active {
-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+box-shadow: inset 0 .1875rem .3125rem rgba(0, 0, 0, 0.125);
 }
 
 /* #nav-tags .bootstrap-tagsinput{
 height:100%;
 } */
 #nav-tags .badge{
-margin-top: 5px;
+margin-top: .3125rem;
 }
